--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,13 @@
 body {
   font-family: Helvetica;
   margin: auto;
-  max-width: 90em;
+  max-width: 80em;
   text-align: center;
-  color: white;
 }
 
 .title {
-	background-image: url("./resources/images/the-flatiron-building.png");
+	background-size: cover;
+	background-image: url("../images/the-flatiron-building.png");
 }
 
 h1 {
@@ -17,6 +17,10 @@ h1 {
 
 .links {
 	font-size:18px;
+}
+
+.centerText {
+	background-image: url("../images/the-flatiron-building.png");
 }
 
 
