--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 h1 {
+	color: white;
 	font-size: 70px;
 	font-weight: bold;
 }
@@ -23,8 +24,15 @@ h1 {
 	background-image: url("../images/the-flatiron-building.png");
 }
 
+.footer{
+	font-size: 11px;
+	background-color: dimgray;
+	text-align: left;
+}
 
-
+.container2 p {
+	font-size: 14px;
+}
 
 
 
